@@ -30,8 +30,6 @@ import ca.uhn.fhir.jpa.dao.IFhirResourceDao;
 import ca.uhn.fhir.rest.annotation.IdParam;
 import ca.uhn.fhir.rest.annotation.Operation;
 import ca.uhn.fhir.rest.annotation.OperationParam;
-import ca.uhn.fhir.rest.annotation.OptionalParam;
-import ca.uhn.fhir.rest.annotation.RequiredParam;
 import ca.uhn.fhir.rest.server.exceptions.InternalErrorException;
 
 /**
@@ -78,8 +76,7 @@ public class ActivityDefinitionApplyProvider {
             String practitionerId, String organizationId) throws FHIRException {
         Resource result = null;
         try {
-            result = (Resource) Class.forName("org.hl7.fhir.r4.model." + activityDefinition.getKind().toCode())
-                    .newInstance();
+            result = (Resource) Class.forName("org.hl7.fhir.r4.model." + activityDefinition.getKind().toCode()).getConstructor().newInstance();
         } catch (Exception e) {
             e.printStackTrace();
             throw new FHIRException("Could not find org.hl7.fhir.r4.model." + activityDefinition.getKind().toCode());
@@ -203,7 +200,7 @@ public class ActivityDefinitionApplyProvider {
         }
 
         if (activityDefinition.hasBodySite()) {
-            throw new ActivityDefinitionApplyException("Bodysite does not map to " + activityDefinition.getKind());
+            throw new ActivityDefinitionApplyException("BodySite does not map to " + activityDefinition.getKind());
         }
 
         if (activityDefinition.hasCode()) {
@@ -217,12 +214,12 @@ public class ActivityDefinitionApplyProvider {
         return medicationRequest;
     }
 
-    private SupplyRequest resolveSupplyRequest(ActivityDefinition activityDefinition, String practionerId,
+    private SupplyRequest resolveSupplyRequest(ActivityDefinition activityDefinition, String practitionerId,
             String organizationId) throws ActivityDefinitionApplyException {
         SupplyRequest supplyRequest = new SupplyRequest();
 
-        if (practionerId != null) {
-            supplyRequest.setRequester(new Reference(practionerId));
+        if (practitionerId != null) {
+            supplyRequest.setRequester(new Reference(practitionerId));
         }
 
         if (organizationId != null) {
@@ -250,7 +247,7 @@ public class ActivityDefinitionApplyProvider {
         }
 
         if (activityDefinition.hasBodySite()) {
-            throw new ActivityDefinitionApplyException("Bodysite does not map to " + activityDefinition.getKind());
+            throw new ActivityDefinitionApplyException("BodySite does not map to " + activityDefinition.getKind());
         }
 
         return supplyRequest;
